# project-defuse

./: CMakeLists.txt  Notes.md  README.md
firmware/: SetupNotes.md
firmware/seg25_puzzle/: CMakeLists.txt  display.cpp  display.h  main.cpp  switches.cpp  switches.h
hardware/: .gitignore  checklist.md
hardware/lib/: Defuse_symbols.kicad_sym
hardware/lib/Defuse_footprints.pretty/: DYSR00P401101.kicad_mod  PiPico_surface.kicad_mod  PiPico_thru.kicad_mod  PiPico_thru_and_surface.kicad_mod
hardware/seg25_puzzle/: Pinout.md  bom.md  dip_switches.kicad_sch  led_display.kicad_sch  seg25_puzzle.kicad_pcb  seg25_puzzle.kicad_prl  seg25_puzzle.kicad_pro  seg25_puzzle.kicad_sch  uc.kicad_sch
hardware/seg25_puzzle/bom/: ibom.html
